--- a/views/index.njk
+++ b/views/index.njk
@@ -5,6 +5,7 @@
 {% block content %}
     <!-- Hero Section -->
     <div class="hero min-h-screen bg-gradient-to-br from-secondary to-primary">
+    <div class="hero-overlay bg-opacity-20" style="display: none;" data-dark-only></div>
         <div class="hero-content text-center text-neutral-content">
             <div class="max-w-lg">
                 <div class="mb-8">
